--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,12 @@
-
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.container {
+    max-width: 1200px;
+  }
+  
+  .jumbotron h1 {
+    font-size: 2.5rem;
+  }
+  
+  .card {
+    border-radius: 8px;
+  }
+  
